syntax = "proto3";

option csharp_namespace = "FriendBook.GroupService.API.BLL.gRPCClients.ContactClient";

package ContactService;
import "Protos/Google/API/annotations.proto";

service PublicContact
{
  rpc GetProfiles (RequestUserLogin) returns (ResponseProfiles){
  option (google.api.http) =
   {
    get: "/IdentityServer/v1/GrpcContactService/GetProfiles"
   };
  }
}

message RequestUserLogin
{
  string Login = 1;
}

message Profile {
  string Login = 1;
  string FullName = 2;
  string Id = 3;
}

message ResponseProfiles
{
  repeated Profile profiles = 1;
}
